client/src/styles/_Home/_statusBar.scss
.StatusBar {
  width: 85%;
  padding: 15px 10px 10px 10px;

  border-radius: 15px;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}

.statusBar-submission {
  display: flex;
  gap: 25px;

  margin-bottom: 15px;
}

.statusBar-submission-user {
  padding-left: 25px;
}
.statusBar-submission-user img {
  width: 50px;
  height: 50px;

  border-radius: 50%;
  border: solid 1px rgba(99, 99, 99, 0.2);
}

.statusBar-submission-input {
  font-size: 16px;
  text-align: left;
  cursor: pointer;
  width: 100%;

  background-color: var(--fb-lightGrey);
  border-radius: 15px;

  outline: none;
  border: none;

  padding: 5px 5px 5px 10px;
  margin-right: 15px;
}
.statusBar-submission-input:hover {
  background-color: var(--fb-grey-hover);
}

.statusBar-nav {
  display: flex;
  text-align: center;

  border-top: solid 2px rgb(205, 208, 212);
}
.statusBar-nav-item {
  margin: 5px 0px 0px 0px;
  padding: 10px;
  border-radius: 10px;
  flex: 1;
}
.statusBar-nav-item:hover {
  background-color: var(--fb-grey-hover);
  cursor: pointer;
}

.nav-feeling {
  color: rgb(247, 185, 40);
  margin-right: 5px;
}
.nav-photo {
  color: rgb(69, 189, 98);
  margin-right: 5px;
}
.nav-liveVideo {
  color: rgb(243, 66, 95);
  margin-right: 5px;
}

@media only screen and (max-width: 600px) {
  .statusBar {
    width: 97%;
  }
}

